--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "concurrently \"npm start --prefix server\" \"npm start --prefix client\"",
+    "build": "cd client && npm run build",
     "postinstall": "cd client && npm install && cd .. && cd server && npm i"
   },
   "devDependencies": {
