--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "scripts": {
     "dev": "concurrently \"npm start --prefix server\" \"npm start --prefix client\"",
     "build": "cd client && npm run build",
-    "postinstall": "cd client && npm install && cd .. && cd server && npm i"
+    "install": "cd client && npm install && cd .. && cd server && npm i"
   },
   "devDependencies": {
     "concurrently": "^7.1.0"
-  },
-  "dependencies": {
-    "animejs": "^3.2.1"
   }
 }
