--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-textarea-code-editor": "^2.0.3",
+    "animejs": "^3.2.1",
     "classnames": "^2.3.1",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
