--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://trueshadowguard.github.io/my-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -9,6 +10,7 @@
     "@uiw/react-textarea-code-editor": "^2.0.3",
     "animejs": "^3.2.1",
     "classnames": "^2.3.1",
+    "gh-pages": "^4.0.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.1.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
