--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.1.0",
     "react-confetti": "^6.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
